load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_binary(
    name = "test",
    data = [
        "awesome.proto",
        "//:node_modules/protobufjs",
    ],
    entry_point = "test.js",
)
